--- a/Color Markers.css
+++ b/Color Markers.css
@@ -5,12 +5,14 @@ h1 {
   .container {
     background-color: rgb(255, 255, 255);
     padding: 10px 0;
+    /*TODO: know the function of the two values under padding property here*/
   }
   
   .marker {
     width: 200px;
     height: 25px;
     margin: 10px auto;
+    /*Auto here is auto for all margins, right?*/
   }
   
   .cap {
@@ -22,16 +24,20 @@ h1 {
     width: 110px;
     height: 25px;
     background-color: rgba(255, 255, 255, 0.5);
+    /*rgba function = red, green, blue, alpha control; a here is similar to opacity */
     border-left: 10px double rgba(0, 0, 0, 0.75);
+    /*the 3 values here are size, style, color; double is just two lines of solid*/
   }
   
   .cap, .sleeve {
     display: inline-block;
+    /*div elements are block levels by default which makes them stack up on each other; inline-blocking them makes them in one line*/
   }
   
   .red {
     background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
     box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+    /*the 5 values here are offsetX offsetY blurRadius spreadRadies color*/
   }
   
   .green {
