--- a/Registration Form.css
+++ b/Registration Form.css
@@ -28,7 +28,9 @@ body {
   }
   
   fieldset:last-of-type {
+    /*last-of-type here selects the last fieldset*/
     border-bottom: none;
+    /*none here separates it from the general fieldset selector*/
   }
   
   label {
@@ -54,6 +56,7 @@ body {
     width: unset;
     margin: 0 0.5em 0 0;
     vertical-align: middle;
+    /*aligns the checkboxes to the text*/
   }
   
   input[type="submit"] {
@@ -77,5 +80,6 @@ body {
   
   a {
     color: #dfdfe2;
+    /*just the color of the terms and conditions link*/
   }
   
