--- a/Tribute Page.css
+++ b/Tribute Page.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: box-border;
+  box-sizing: border-box;
 }
 
 * {
@@ -56,11 +56,12 @@ text-align: center;
   background-color: hsl(0, 0%, 93%);
   margin-inline: 6rem;
   padding-inline: 2rem;
+  display: block;
 }
 
 #tribute-info h2 {
-  text-align: center;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 #tribute-info > ul > li {
@@ -79,8 +80,6 @@ text-align: center;
 }
 
 #more {
-  width: 100%;
-  font-size: 22;
+  font-size: 20px;
   text-align: center;
-  font-style: bold;
 }
