--- a/CSS Grid Magazine.css
+++ b/CSS Grid Magazine.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  /* this allows for the rem unit of measurement to be exact*/
 }
 
 body {
@@ -32,12 +33,15 @@ a {
 main {
   display: grid;
   grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(2rem, 1fr);
+  /* edits the columns; minmax() function is self-explanatory */
   row-gap: 3rem;
+  /* new property, self-explanatory */
 }
 
 img {
   width: 100%;
   object-fit: cover;
+  /* fits the element into its container */
 }
 
 hr {
@@ -47,8 +51,10 @@ hr {
 
 .heading {
   grid-column: 2 / 3;
+  /* tells where the element will start at numerator and where it will end at denominator */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  /* repeat() function tells to repeat a recurring pattern*/
   row-gap: 1.5rem;
 }
 
@@ -62,6 +68,7 @@ hr {
 
 .hero {
   grid-column: 1 / -1;
+  /* -1 is the last column */
   position: relative;
 }
 
@@ -95,14 +102,17 @@ hr {
   font-size: 3rem;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-flow: column;
+  /* this property auto-flows the content as a column */
   grid-auto-columns: 1fr;
   align-items: center;
 }
 
 .first-paragraph::first-letter {
+  /* ::first-letter pseudo-selector specifies the first letter of the element */
   font-size: 6rem;
   color: orangered;
   float: left;
+  /* float: left; helped align the first letter */
   margin-right: 1rem;
 }
 
@@ -118,4 +128,76 @@ hr {
 }
 .quote::after {
   content: ' "' ;
+}
+
+.text-with-images {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 3rem;
+  /*  */
+  margin-bottom: 3rem;
+}
+
+.lists {
+  list-style-type: none;
+  margin-top: 2rem;
+}
+
+.lists li {
+  margin-bottom: 1.5rem;
+}
+
+.list-title, .list-subtitle {
+  color: #00beef;
+}
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+  place-items: center;
+}
+
+.image-1, .image-3 {
+  grid-column: 1 / -1;
+}
+
+@media only screen and (max-width: 720px) {
+  .image-wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .text-with-images {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .hero-title {
+    font-size: 6rem;
+  }
+  
+  .hero-subtitle,
+  .author,
+  .quote,
+  .list-title {
+    font-size: 1.8rem;
+  }
+  
+  .social-icons {
+    font-size: 2rem;
+  }
+
+  .text {
+    font-size: 1.6rem;
+  } 
+}
+
+@media only screen and (max-width: 420px) {
+  .hero-title {
+    font-size: 4.5rem;
+  }
 }
