--- a/Product Landing Page.css
+++ b/Product Landing Page.css
@@ -1,9 +1,11 @@
+/* Resetting default browser styles */
 *,
 ::before,
 ::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 :root {
@@ -14,37 +16,159 @@ html {
   font-size: 62.5%;
 }
 
-img {
+/* Global styles */
+body {
+    background-color: #513431;
+    line-height: 1.6;
+}
+
+/* img {
   max-width: auto;
   display: block;
-}
+} */
 
 img {
   width: 10%;
 }
 
 #header {
-  font-size: 2rem;
-  display: flex;
-  flex-direction: row;
   background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
   position: fixed;
   top: 0;
-  z-index: 100;
 }
 
 #header-img {
   width: 10%;
+  height: auto;
+  /* margin: 1rem; */
+  text-align: center;
 }
 
 #nav-bar {
-  place-items: center;
+  text-align: center;
+  margin-top: 20px;
 }
 
-@media (max-width: 420px) {
-  #Pricing {
+#header > h2 {
+    font-size: 4em;
+    font-weight: strong;
+    color: #bc9f9f;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 1.5em;
+    color: #fff;
+    margin: 0 10px;
+}
+
+form {
+    background-color: #fff;
+    padding: 20px;
+    margin-top: 22rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+}
+
+form > header {
+    font-size: 3em;
+}
+
+#email {
+    width: 50%;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#submit {
+    background-color: #333;
+    font-size: 1em;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Declarations for both */
+
+#Features, #Pricing {
+    background-color: #fff;
+    padding: 40px 20px;
+}
+
+/* Features Section */
+
+#Features {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+}
+
+#Features > div > img {
+    display: block;
+}
+
+.text {
+    text-wrap: wrap;
+    width: 100%;
+    height: auto;
+    margin: 2rem;
+    /* background-color: blue; */
+}
+
+.text > header {
+    font-size: 1em;
+    font-weight: bold;
+}
+
+/* Pricing Section */
+#Pricing {
     display: flex;
     flex-direction: row;
-    place-items: center;
-  }
+}
+
+fieldset {
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    text-align: center;
+    max-width: 300px;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+
+.fieldset-header {
+    background-color: #5d3737;
+    font-size: 3rem;
+    color: #fff;
+    margin-bottom: 2rem;
+    padding: 2rem;
+}
+
+fieldset > #submit {
+    margin: 1.5rem;
+}
+
+h3 {
+    font-size: 2.5rem;
+}
+
+/* Responsive design */
+@media only screen and (max-width: 768px) {
+    #Pricing {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+/* Adjustments for iframe */
+iframe {
+    display: block;
+    margin: 0 auto;
 }
